--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-  font-size: 18px;
+  font-size: 20px;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
@@ -65,7 +65,7 @@ button:focus-visible {
 }
 
 footer{
-  font-size: 1em;
+  font-size: .9em;
 }
 
 @media (prefers-color-scheme: light) {
